--- a/K-Means Clustering.ipynb
+++ b/K-Means Clustering.ipynb
@@ -18,7 +18,7 @@
     "from sklearn.cluster import KMeans\n",
     "import pandas as pd\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from matplotlib import pyplot as plt\n",
+    "from matplotlib import pyplot as plt\n"
    ]
   },
   {
@@ -706,18 +706,7 @@
    "source": [
     "<h4 style='color:purple'>Exercise</h4>"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src='iris.png' width=200 height=200>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-  }
+  }, 
  ],
  "metadata": {
   "kernelspec": {
