--- a/K-Means Clustering.ipynb
+++ b/K-Means Clustering.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 align='center' style='color:purple'>Clustering With K Means - Python Tutorial</h1>"
+    "<h1 align='center' style='color:purple'>Clustering With K Means</h1>"
    ]
   },
   {
@@ -706,7 +706,23 @@
    "source": [
     "<h4 style='color:purple'>Exercise</h4>"
    ]
-  }, 
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='iris.png' width=200 height=200>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Use iris flower dataset from sklearn library and try to form clusters of flowers using petal width and length features. Drop other two features for simplicity.\n",
+    "2. Figure out if any preprocessing such as scaling would help here\n",
+    "3. Draw elbow plot and from that figure out optimal value of k"
+   ]
+  }
  ],
  "metadata": {
   "kernelspec": {
