--- a/K-Means Clustering.ipynb
+++ b/K-Means Clustering.ipynb
@@ -704,7 +704,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4 style='color:purple'>Exercise</h4>"
+    "<h4 style='color:purple'>Thank You!</h4>"
    ]
   },
   {
@@ -718,9 +718,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Use iris flower dataset from sklearn library and try to form clusters of flowers using petal width and length features. Drop other two features for simplicity.\n",
-    "2. Figure out if any preprocessing such as scaling would help here\n",
-    "3. Draw elbow plot and from that figure out optimal value of k"
+    "This was simple K-means implementation in Python",
    ]
   }
  ],
