--- a/K-Means Clustering.ipynb
+++ b/K-Means Clustering.ipynb
@@ -718,7 +718,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This was simple K-means implementation in Python",
+    "This was simple K-means implementation in Python"
    ]
   }
  ],
